--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
   <nav class="nav">
     <div class="logo">
       <a href="index.html">
-        <img src="../assets/img/logo2.png" alt="logo" />
+        <img src="assets/img/logo2.png" alt="logo" />
       </a>
     </div>
     <div class="menu d-none d-md-block">
       <ul class="main-menu">
-        <li><a href="proyecto.html">Inicio</a></li>
+        <li><a href="index.html">Inicio</a></li>
         <li><a href="Nosotros.html">Nosotros</a></li>
         <li><a href="info.html">Info</a></li>
         <li><a href="contacto.html">Contacto</a></li>
