--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
      rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" 
      crossorigin="anonymous">
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-     <link rel="stylesheet" href="../css/style.css">
+     <link rel="stylesheet" href="./css/style.css">
 </head>
   <nav class="nav">
     <div class="logo">
       <a href="index.html">
-        <img src="assets/img/logo2.png" alt="logo" />
+        <img src="./assets/img/logo2.png" alt="logo" />
       </a>
     </div>
     <div class="menu d-none d-md-block">
@@ -32,7 +32,7 @@
     </div>
   </nav>
 <div class="ratio ratio-21x9">
-  <iframe src="../assets/video/planta-recicladora.mp4"  title="YouTube video" muted ></iframe>
+  <iframe src="./assets/video/planta-recicladora.mp4"  title="YouTube video" muted ></iframe>
 </div>
 
   <section class="sec-home">
@@ -59,7 +59,7 @@
       </div>
     </div>
     <div class="home-img d-none d-md-block">
-      <img onmouseover="reproducirAudio3()" src="../assets/img/frases_para_concienciar_del_reciclaje_1495_0_600.webp" alt="wallet" />
+      <img onmouseover="reproducirAudio3()" src="./assets/img/frases_para_concienciar_del_reciclaje_1495_0_600.webp" alt="wallet" />
     </div>
   </section>
   <section class="sec-features">
@@ -108,7 +108,7 @@
         </div>
       </div>
       <div class="image d-none d-md-block">
-        <img onmouseover="reproducirAudio2()" src="../assets/img/naturaleza.jpg" alt="chart" />
+        <img onmouseover="reproducirAudio2()" src="./assets/img/naturaleza.jpg" alt="chart" />
       </div>
     </div>
   </section>
@@ -151,7 +151,7 @@
   </section>
   
  
-  <script src="../js/script2.js"></script>
+  <script src="./js/script2.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" 
     crossorigin="anonymous">
