--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto Final</title>
+    <title>La Nueva Santa Cruz</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
      rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" 
      crossorigin="anonymous">
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-     <link rel="stylesheet" href="../css/style.css">
+     <link rel="stylesheet" href="./css/style.css">
 </head>
   <nav class="nav">
     <div class="logo">
-      <a href="proyecto.html">
-        <img src="../assets/img/logo2.png" alt="logo" />
+      <a href="index.html">
+        <img src="./assets/img/logo2.png" alt="logo" />
       </a>
     </div>
     <div class="menu d-none d-md-block">
       <ul class="main-menu">
-        <li><a href="proyecto.html">Inicio</a></li>
+        <li><a href="index.html">Inicio</a></li>
         <li><a href="Nosotros.html">Nosotros</a></li>
         <li><a href="info.html">Info</a></li>
         <li><a href="contacto.html">Contacto</a></li>
@@ -32,7 +32,7 @@
     </div>
   </nav>
 <div class="ratio ratio-21x9">
-  <iframe src="../assets/video/planta-recicladora.mp4"  title="YouTube video" muted ></iframe>
+  <iframe src="./assets/video/planta-recicladora.mp4"  title="YouTube video" muted ></iframe>
 </div>
 
   <section class="sec-home">
