--- a/info.html
+++ b/info.html
@@ -17,7 +17,7 @@
     </div>
     <div class="menu d-none d-md-block">
       <ul class="main-menu">
-        <li><a href="index.html">Inicio</a></li>
+        <li><a href="../index.html">Inicio</a></li>
         <li><a href="Nosotros.html">Nosotros</a></li>
         <li><a href="info.html">Info</a></li>
         <li><a href="contacto.html">Contacto</a></li>
