--- a/html/index.html
+++ b/html/index.html
@@ -19,8 +19,8 @@
     </div>
     <div class="menu d-none d-md-block">
       <ul class="main-menu">
-        <li><a href="proyecto.html">Inicio</a></li>
-        <li><a href="../html/Nosotros.html">Nosotros</a></li>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="/html/Nosotros.html">Nosotros</a></li>
         <li><a href="info.html">Info</a></li>
         <li><a href="contacto.html">Contacto</a></li>
         <li><a href="formulario.html">Formulario</a></li>
