--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
 </head>
   <nav class="nav">
     <div class="logo">
-      <a href="proyecto.html">
+      <a href="index.html">
         <img src="../assets/img/logo2.png" alt="logo" />
       </a>
     </div>
